2010-01-03  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	    Load some default plugins when there is no config file. Fixes #9
	

2009-12-08  Ben Van Mechelen  <me@benvm.be>

	* scripts/elm_sim.py:
	    Add possibility to specify a port on the command line
	    + some minor improvements
	

2009-12-07  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboardcairo/dashboardcairo.py:
	    Showing the needles in the correct position
	

2009-12-05  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboardcairo/dashboardcairo.py:
	    Give credit to Maclow for the code from his Cairo Clock
	

2009-12-05  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboardcairo/Makefile.am:
	* plugins/dashboardcairo/dashboard.ui:
	* plugins/dashboardcairo/dashboardcairo.py:
	    So far the gauges are showing but marks are still missing
	* plugins/dashboardcairo/themes/Makefile.am:
	* plugins/dashboardcairo/themes/default/Makefile.am:
	* plugins/dashboardcairo/themes/default/backplate-shadow.svg:
	* plugins/dashboardcairo/themes/default/backplate.svg:
	* plugins/dashboardcairo/themes/default/centric-needle-shadow.svg:
	* plugins/dashboardcairo/themes/default/centric-needle.svg:
	* plugins/dashboardcairo/themes/default/excentric-needle.svg:
	* plugins/dashboardcairo/themes/default/glass.svg:
	* plugins/dashboardcairo/themes/default/rim.svg:
	    Created a default theme
	    

2009-12-01  Ben Van Mechelen  <me@benvm.be>

	* plugins/Makefile.am:
	* plugins/dashboardcairo/Makefile.am:
	* plugins/dashboardcairo/dashboard.ui:
	* plugins/dashboardcairo/dashboardcairo.py:
		Create a new dashboard plugin that will use cairo
			

2009-07-21  Ben Van Mechelen  <me@benvm.be>

	* data/device_prefs.ui:
	* data/general_prefs.ui:
	* data/prefs.ui:
	* garmon/garmon_app.py:
	    No baudrates are shown in the combobox; fix #8

2009-05-18  Ben Van Mechelen  <me@benvm.be>

	* garmon/scheduler.py:
	    QueueItem: no args should be supplield to str.__init__
	

2009-05-06  Ben Van Mechelen  <me@benvm.be>
