@@ -40,10 +40,14 @@ AC_OUTPUT([
 Makefile
 garmon/Makefile
 garmon/defs.py
+garmon/garmon
 data/Makefile
 data/garmon.desktop.in
 plugins/Makefile
 plugins/dashboard/Makefile
+plugins/dashboardcairo/Makefile
+plugins/dashboardcairo/themes/Makefile
+plugins/dashboardcairo/themes/default/Makefile
 plugins/dtc_clearer/Makefile
 plugins/dtc_reader/Makefile
 plugins/live_data/Makefile
